<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cadastrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="@string/cadastroNovoCliente"
        android:textSize="10pt"></TextView>

    <EditText
        android:id="@+id/edNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:hint="nome"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edTelefone"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="bottom"
        android:hint="Telefone"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edcelular"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:hint="celular"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/EditTextEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackemail"
        android:inputType="textEmailAddress"></EditText>

    <EditText
        android:id="@+id/EditTextServico"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Servico"
        android:inputType="textPersonName"></EditText>

    <Spinner
        android:id="@+id/SpinnerFeedbackType"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:entries="@array/CadastroUrgenciaServicoCliente"
        android:prompt="@string/CadastroUrgenciaServico1"></Spinner>

    <EditText
        android:id="@+id/EditTextFeedbackBody"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feedbackbody"
        android:inputType="textMultiLine"
        android:lines="5"></EditText>

    <CheckBox
        android:id="@+id/CheckBoxResponse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/feedbackresponse"></CheckBox>

    <Button
        android:id="@+id/btnconfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:onClick="onClickConfirmarClienteCadastro"
        android:text="Salvar" />

</LinearLayout>

