<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cadastrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="1dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/TextViewTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/common_google_signin_btn_text_dark_default"
        android:text="Preencha o Serviço:"
        android:textSize="10pt"></TextView>

    <TabHost
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/Escolha"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <Spinner
                        android:id="@+id/SpinnerUF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:entries="@array/CadastrolistUF"
                        android:prompt="@string/CadastrolistUF"
                        android:scaleX="0.75"
                        android:scaleY="0.75"></Spinner>

                    <Spinner
                        android:id="@+id/SpinnerCidade"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@+id/SpinnerUF"
                        android:entries="@array/CadastrolistCidade"
                        android:prompt="@string/CadastrolistCidade"
                        android:scaleX="0.75"
                        android:scaleY="0.75"></Spinner>

                    <Spinner
                        android:id="@+id/SpinnerBairro"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBaseline="@+id/SpinnerCidade"
                        android:layout_alignBottom="@+id/SpinnerCidade"
                        android:layout_toEndOf="@+id/SpinnerCidade"
                        android:entries="@array/ListaBairro"
                        android:prompt="@string/ListaBairro"
                        android:scaleX="0.75"
                        android:scaleY="0.75"></Spinner>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>
    </TabHost>




    <Spinner
        android:id="@+id/SpinnerUrgencia"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:entries="@array/CadastrolistUrgencia"
        android:prompt="@string/CadastrolistUrgencia"></Spinner>

    <EditText
        android:id="@+id/edtTituloServico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="top"
        android:hint="Titulo do Serviço:"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edtDescricaoServico"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="15dp"
        android:hint="Informações Adicionais"
        android:inputType="textMultiLine"
        android:lines="5">
    </EditText>

    <Button
        android:id="@+id/btnService"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:onClick="OnclickCadastrarServico"
        android:text="Cadastrar Serviço" />

</LinearLayout>

