<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrowView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:gravity="top"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp"
            android:text="Digite os dados para efetuar o cadastro:"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nome:" />

            <EditText
                android:id="@+id/editnome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutsobrenome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewsobrenome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sobrenome:" />

            <EditText
                android:id="@+id/edsobrenome"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPersonName">

                <requestFocus />
            </EditText>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="15dp">

             <Spinner
                android:id="@+id/SpinnerUF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/CadastrolistUF"
                android:gravity="left|top"
                android:prompt="@string/CadastrolistUF"
                android:scaleX="0.75"
                android:scaleY="0.75"></Spinner>

            <Spinner
                android:id="@+id/SpinnerCidade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/SpinnerUF"
                android:entries="@array/CadastrolistCidade"
                android:gravity="top|center"
                android:prompt="@string/CadastrolistCidade"
                android:scaleX="0.75"
                android:scaleY="0.75"></Spinner>

            <Spinner
                android:id="@+id/SpinnerListaBairro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:entries="@array/ListaBairro"
                android:gravity="right"
                android:prompt="@string/ListaBairro"
                android:scaleX="0.75"
                android:scaleY="0.75"></Spinner>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Endereço:" />

            <EditText
                android:id="@+id/edendereco"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textView3.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Num:" />

            <EditText
                android:id="@+id/ednum"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Complemento:" />

            <EditText
                android:id="@+id/edcomplemento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewemail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:" />

            <EditText
                android:id="@+id/edemail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewemailpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Digite um Password:" />

            <EditText
                android:id="@+id/edpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutconfpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <TextView
                android:id="@+id/textViewconfpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Confrmar Password:" />

            <EditText
                android:id="@+id/edconfpassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Telefone:" />

            <EditText
                android:id="@+id/edtelefone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone" />

            <TextView
                android:id="@+id/textView5.1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Celular:" />

            <EditText
                android:id="@+id/edcelular"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="phone" />

        </LinearLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:onClick="btnSave"
            android:text="Confirmar" />


    </LinearLayout>
</ScrollView>